tests/type_errors/calling_with_incorrect_args.sy
type A = foreign

def f
: Int -> Int
: a = x ' a

def x
: A -> A
: a = a

--+ expected exit status: 3
--+ expected stderr:
--+ > Failed to merge types.
--+ 
--+ A
--+ ----
--+ Int
--+ 
--+   5| : a = x ' a
--+              ^
--+ 
